--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.16.6",
     "@react-three/postprocessing": "^2.16.2",
     "file-saver": "^2.0.5",
+    "firebase": "^10.12.2",
     "jotai": "^2.8.3",
     "leva": "^0.9.35",
     "postprocessing": "^6.35.5",
