--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postprocessing": "^6.35.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "three": "^0.164.1"
   },
   "devDependencies": {
