--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
     "@react-three/postprocessing": "^2.16.2",
+    "bourbon": "^7.3.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.12.2",
     "jotai": "^2.8.3",
     "leva": "^0.9.35",
+    "node-sass": "^9.0.0",
     "postprocessing": "^6.35.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.24.1",
+    "sass": "^1.77.6",
     "three": "^0.164.1"
   },
   "devDependencies": {
