add light manager

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "node-sass": "^9.0.0",
     "postprocessing": "^6.35.5",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-router-dom": "^6.24.1",
     "sass": "^1.77.6",
     "three": "^0.164.1"
