--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
     "@react-three/postprocessing": "^2.16.2",
+    "@react-three/xr": "^6.1.1",
     "bourbon": "^7.3.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.12.2",
