--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.105.6",
-    "@react-three/fiber": "^8.16.6",
+    "@react-three/fiber": "^8.17.5",
     "@react-three/postprocessing": "^2.16.2",
+    "@react-three/uikit": "^0.4.1",
     "@react-three/xr": "^6.1.1",
+    "aframe": "^1.6.0",
     "bourbon": "^7.3.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.12.2",
